fix label missing margin for content

--- a/Tesserae/h5/assets/css/tss.label.css
+++ b/Tesserae/h5/assets/css/tss.label.css
@@ -20,9 +20,9 @@
     white-space: nowrap;
 }
 
-    .tss-label > div {
-        margin: 0;
-    }
+.tss-label > div {
+    margin: 4px;
+}
 
 
 .tss-label.tss-inline {
